--- a/Code/first-python-notebook/Untitled1.ipynb
+++ b/Code/first-python-notebook/Untitled1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First Python Notebook\n",
+    "Hell world!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
